--- a/ts-api-dashboard/index.html
+++ b/ts-api-dashboard/index.html
@@ -7,7 +7,14 @@
     <title>ts-api-dashboard</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Github User Display</h1>
+
+      <input id="username" placeholder="Enter GitHub username" />
+      <button id="searchBtn">Search</button>
+
+      <div id="result"></div>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
-</html>
